--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!--  Base application theme.  -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
+        <!--  Customize your theme here.  -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
         <item name="android:windowDisablePreview">true</item>
         <item name="android:windowBackground">@null</item>
-
         <item name="android:editTextStyle">@style/EditTextStyle</item>
         <item name="android:buttonStyle">@style/ButtonStyle</item>
         <item name="android:textViewStyle">@style/TextViewStyle</item>
         <item name="android:radioButtonStyle">@style/RadioStyle</item>
         <item name="fontFamily">@font/poppins_regular</item>
-
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
-
     </style>
     <style name="user_coin_bg">
         <item name="android:layout_width">@dimen/dp85</item>
@@ -28,28 +25,20 @@
     <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
         <item name="android:fontFamily">@font/poppins_regular</item>
     </style>
-
     <style name="ButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:fontFamily">@font/poppins_regular</item>
     </style>
-
     <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/poppins_regular</item>
     </style>
-
     <style name="RadioStyle" parent="Widget.AppCompat.CompoundButton.RadioButton">
         <item name="android:fontFamily">@font/poppins_regular</item>
     </style>
-
-    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
-
-    </style>
-
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert"> </style>
     <style name="DialogTheme">
         <item name="android:windowEnterAnimation">@anim/slide_left</item>
         <item name="android:windowExitAnimation">@anim/slide_right</item>
     </style>
-
     <style name="EditTextWithBackground">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">40dp</item>
@@ -63,7 +52,6 @@
         <item name="android:layout_marginHorizontal">5dp</item>
         <item name="android:elevation">5dp</item>
     </style>
-
     <style name="BlackTextview">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -74,7 +62,6 @@
         <item name="android:text">0</item>
         <item name="android:layout_marginLeft">20dp</item>
     </style>
-
     <style name="PlayerWalletTextview">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -84,7 +71,6 @@
         <item name="android:shadowColor">@color/black</item>
         <item name="android:text">0</item>
     </style>
-
     <style name="ShadowWhiteTextview">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -96,7 +82,6 @@
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">3</item>
     </style>
-
     <style name="UserNameTextStyle">
         <item name="android:layout_width">70dp</item>
         <item name="android:layout_height">wrap_content</item>
@@ -114,13 +99,11 @@
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">3</item>
     </style>
-
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_bottom</item>
         <item name="android:windowExitAnimation">@anim/slide_up</item>
     </style>
-
-    <!--  Transparent dialog -->
+    <!--   Transparent dialog  -->
     <style name="TransparentProgressDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowBackground">@color/transparent</item>
@@ -132,8 +115,7 @@
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:background">@color/transparent</item>
     </style>
-
-    <!--BottomSheetDialog-->
+    <!-- BottomSheetDialog -->
     <style name="SheetDialog" parent="Theme.Design.Light.BottomSheetDialog">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowContentOverlay">@null</item>
@@ -143,8 +125,6 @@
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
     </style>
-
-
     <style name="HomeIconTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -156,7 +136,6 @@
         <item name="android:layout_marginBottom">5dp</item>
         <item name="android:textAllCaps">true</item>
     </style>
-
     <style name="ShadowGoldTextview">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -168,7 +147,6 @@
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">3</item>
     </style>
-
     <style name="ShadowGoldTextviewNew">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -180,7 +158,6 @@
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">3</item>
     </style>
-
     <style name="UserStatusCirclrTextview">
         <item name="android:layout_width">55dp</item>
         <item name="android:layout_height">55dp</item>
@@ -194,7 +171,6 @@
         <item name="android:shadowColor">@color/black</item>
         <item name="android:visibility">gone</item>
     </style>
-
     <style name="TableHeadingTextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -204,7 +180,6 @@
         <item name="android:gravity">center</item>
         <item name="android:ellipsize">end</item>
     </style>
-
     <style name="TableValueTextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -216,7 +191,6 @@
         <item name="android:ellipsize">end</item>
         <item name="android:text">000</item>
     </style>
-
     <style name="GameHeadingTextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -227,9 +201,7 @@
         <item name="android:ellipsize">end</item>
         <item name="android:textStyle">bold</item>
     </style>
-
     <string name="pending">Pending</string>
-
     <style name="RummDetailsText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -246,20 +218,17 @@
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">3</item>
     </style>
-
     <style name="carRoulateIconSelectionStyle">
         <item name="android:layout_width">@dimen/payu_dimen_45dp</item>
         <item name="android:layout_height">@dimen/payu_dimen_45dp</item>
         <item name="android:visibility">gone</item>
         <item name="android:background">@drawable/ic_carroulate_selectedbg</item>
     </style>
-
     <style name="carRoulateIconStyle">
         <item name="android:layout_width">@dimen/dp35</item>
         <item name="android:layout_height">@dimen/dp35</item>
         <item name="android:layout_centerInParent">true</item>
     </style>
-
     <style name="teenpattiSlideshowText">
         <item name="android:layout_width">50dp</item>
         <item name="android:layout_height">50dp</item>
@@ -270,7 +239,6 @@
         <item name="android:visibility">gone</item>
         <item name="android:gravity">center</item>
     </style>
-
     <style name="closeButton">
         <item name="android:layout_width">24dp</item>
         <item name="android:layout_height">24dp</item>
@@ -279,7 +247,6 @@
         <item name="android:layout_marginTop">@dimen/dimen_35dp</item>
         <item name="android:layout_marginRight">@dimen/dp50</item>
     </style>
-
     <style name="popUpBoxbg">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -290,7 +257,6 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@drawable/home_bg2</item>
     </style>
-
     <style name="dialogParentStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -318,7 +284,6 @@
         <item name="android:shadowColor">@color/black</item>
         <item name="android:text">-</item>
     </style>
-
     <style name="profileFieldValueTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -331,7 +296,6 @@
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">right</item>
     </style>
-
     <style name="profileFieldParent">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">30dp</item>
@@ -341,7 +305,6 @@
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
     </style>
-
     <style name="packageRaiseButtonStyle">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">35dp</item>
@@ -368,7 +331,6 @@
         <item name="android:layout_marginTop">-12dp</item>
         <item name="android:paddingTop">10dp</item>
     </style>
-
     <style name="PokerPlayerRoleTextview">
         <item name="android:layout_width">22dp</item>
         <item name="android:layout_height">22dp</item>
@@ -383,8 +345,6 @@
         <item name="android:gravity">center</item>
         <item name="android:text">B</item>
     </style>
-
-
     <style name="colorLastWinHeadingText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -396,7 +356,6 @@
         <item name="android:includeFontPadding">false</item>
         <item name="android:singleLine">false</item>
     </style>
-
     <style name="colorLastWinHeadingbg" parent="Widget.MaterialComponents.CardView">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
@@ -404,7 +363,6 @@
         <item name="cardElevation">0dp</item>
         <item name="android:layout_marginLeft">5dp</item>
     </style>
-
     <style name="roulatteBoadPutBetTextview">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -417,7 +375,6 @@
         <item name="android:shadowRadius">3</item>
         <item name="android:paddingHorizontal">2dp</item>
     </style>
-
     <style name="RummyActionButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">40dp</item>
@@ -427,7 +384,6 @@
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:background">@drawable/d_btn_brown</item>
     </style>
-
     <style name="RummyActionButton_drop">
         <item name="android:layout_width">@dimen/dp90</item>
         <item name="android:layout_height">40dp</item>
@@ -443,6 +399,5 @@
         <item name="android:textStyle">bold</item>
         <item name="android:shadowColor">@color/black</item>
         <item name="android:layout_marginRight">10dp</item>
-
     </style>
 </resources>
