--- a/app/src/main/res/layout/activity_add_cash_details.xml
+++ b/app/src/main/res/layout/activity_add_cash_details.xml
@@ -182,7 +182,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Gaming27 RBM GAMING"
+                                android:text="Big Jackpot RBM GAMING"
                                 android:textColor="#333333"
                                 android:textSize="12sp"
                                 android:textStyle="bold"
@@ -223,7 +223,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Gaming27@paytm"
+                                android:text="Bigjackpot@paytm"
                                 android:textColor="#333333"
                                 android:textSize="12sp"
                                 android:textStyle="bold"
