--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -95,7 +95,7 @@
                         android:paddingRight="50dp"
                         android:visibility="visible">
 
-                        <com.gamegards.gaming27.MyFlowLayout
+                        <com.gamegards.bigjackpot.MyFlowLayout
                             android:id="@+id/lnrGamesTabs"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -514,7 +514,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -540,7 +540,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -570,7 +570,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -600,7 +600,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -634,7 +634,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -663,7 +663,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -692,7 +692,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -721,7 +721,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -754,7 +754,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -782,7 +782,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -810,7 +810,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -838,7 +838,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
@@ -869,7 +869,7 @@
                             android:padding="10dp"
                             android:visibility="visible">
 
-                            <com.gamegards.gaming27.CustomView.ShiningView
+                            <com.gamegards.bigjackpot.CustomView.ShiningView
                                 android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="-70dp"
