--- a/app/src/main/res/layout/activity_aviator_animation_test.xml
+++ b/app/src/main/res/layout/activity_aviator_animation_test.xml
@@ -8,7 +8,7 @@
 
 
     <!-- Custom Animation View -->
-    <com.gamegards.gaming27._Aviator.AviatorAnimationView
+    <com.gamegards.bigjackpot._Aviator.AviatorAnimationView
         android:id="@+id/aviator_animation_view"
         android:layout_width="match_parent"
         android:layout_height="400dp"
