--- a/app/src/main/res/layout/activity_aviator_socket_vertical.xml
+++ b/app/src/main/res/layout/activity_aviator_socket_vertical.xml
@@ -100,7 +100,7 @@
         <!-- Custom Animation View -->
 
         <!-- GIF ImageView for animations (fallback/hidden) -->
-        <com.gamegards.gaming27._Aviator.AviatorAnimationView
+        <com.gamegards.bigjackpot._Aviator.AviatorAnimationView
             android:id="@+id/aviator_animation_view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_350dp"
