--- a/ludogame/src/main/res/layout/activity_local_game.xml
+++ b/ludogame/src/main/res/layout/activity_local_game.xml
@@ -22,6 +22,20 @@
         tools:layout_editor_absoluteX="0dp"
         />
 
+
+
+    <ImageView
+        android:id="@+id/imgback"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/back"
+        android:visibility="visible"
+        android:elevation="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/cheatview"
         android:layout_width="70dp"
