--- a/app/src/main/res/layout/activity_luck_jack_pot.xml
+++ b/app/src/main/res/layout/activity_luck_jack_pot.xml
@@ -37,6 +37,19 @@
         android:src="@drawable/ic_jackpot_info"
         android:visibility="visible" />
 
+    <ImageView
+        android:id="@+id/btnBetHistory"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/ic_history"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:padding="6dp"
+        android:visibility="visible" />
+
     <LinearLayout
         android:layout_width="38dp"
         android:layout_height="38dp"
