--- a/ludogame/src/main/res/layout/activity_vs_computer.xml
+++ b/ludogame/src/main/res/layout/activity_vs_computer.xml
@@ -34,6 +34,18 @@
         />
 
     <ImageView
+        android:id="@+id/imgback"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/back"
+        android:visibility="visible"
+        android:elevation="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/arrow_view"
         android:layout_width="50dp"
         android:layout_height="50dp"
