--- a/app/src/main/res/layout/activity_andhar_bahar_horizontal.xml
+++ b/app/src/main/res/layout/activity_andhar_bahar_horizontal.xml
@@ -1086,7 +1086,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/txt_gameId"
+                android:id="@+id/txt_gameId_bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
